<resources>
    <string name="app_name">D2D Customer</string>
    <string name="dawn_to_dusk">Dawn to Dusk</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="start_from">Starts from</string>
    <string name="full_name">Full Name</string>
    <string name="Email">Email</string>
    <string name="Country_code">Country Code</string>
    <string name="mobile_no">Mobile No</string>
    <string name="registration_details_sharedPreferences">Registration Details </string>
    <string name="sharedPreference_cart_item_count">Cart Item Count</string>
    <string name="sharedPreference_otp_input">otp inputs</string>
    <string name="veg">Veg</string>
    <string name="menu">MENU</string>
    <string name="view_cart">View Cart</string>
    <string name="subCategory_sharedPreference_data">sub Category SharedPreference Data</string>
    <string name="aed">AED</string>
    <string name="plan_start_date">Plan Start Date</string>
    <string name="plan_end_date">Plan End Date</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="allergy_info">Allergy Info</string>
    <string name="select_delivery_date"> Select Delivery Date</string>
    <string name="add">Add</string>
    <string name="addons">Add-ons</string>
    <string name="selection">Selection</string>
    <string name="yourOrderDetails">Your Order Details</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="community">Community</string>
    <string name="vill_no">Villa No</string>
    <string name="landmark">Landmark</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="payment">Payment</string>
    <string name="date">Date</string>
    <string name="you_cart_is_empty_add_something_from_the_menu">Your Cart is empty Add something from the menu</string>
    <string name="payment_gateway">Payment gateway</string>
    <string name="cod">COD</string>
    <string name="coupon">Coupon</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="invoice">Invoice</string>
    <string name="items">Items</string>
    <string name="item_total">Item Total</string>
    <string name="plan_total">Plan Total</string>
    <string name="grand_total">Grand Total</string>
    <string name="deliveryCharge">Delivery Charges</string>
    <string name="vat">VAT(5%)</string>
    <string name="total_price">Total Price</string>
    <string name="terms_and_conditions">I agree to all Terms and Conditions</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="order_details">Order Details</string>
    <string name="delivery_to">Delivery To</string>
    <string name="order_id">Order Id</string>
    <string name="active_address_cant_be_delete">Active address can\'t be delete</string>
    <string name="out_for_delivery">Out for Delivery</string>
    <string name="received">Received</string>
    <string name="check_out">Check Out</string>
    <string name="please_enter_villa_no">Please Enter Villa No</string>
    <string name="provide_shipping_details">Provide Shipping Details</string>
    <string name="please_enter_land_mark">Please Enter LandMark</string>
    <string name="item">Item</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="addresses">Address</string>
    <string name="order_history">Order History</string>
    <string name="app_settings">App Settings</string>
    <string name="yourOrders">Your Orders</string>
    <string name="order_summary">Order Summary</string>
    <string name="start_ordering">Start Ordering</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_reason">Cancel Reason</string>
    <string name="cancel_reason_required">Cancel Reason Required!!</string>
    <string name="subscription_plan_details_sharedPreferences">Registration Details </string>
    <string name="choose_subscription_plan">Choose Subscription Plan</string>
    <string name="select_plan_start_date">Select Plan Start Date</string>
    <string name="reviewOrders">Review Your Orders</string>
    <string name="days_plan">days plan</string>
    <string name="pay_aed">Pay AED </string>
    <string name="allergy_info_contents">GF - Gluten free,D - Contains diary,N - Contains Nuts,SS - sea same seed,SO - Soya,V - vegetarian,S - spicy</string>
    <string name="termsAndConditions">Terms &amp; Conditions</string>
    <string name="how_its_works_contents">•	Breakfast combos are delivered every day at around 6AM to the chosen address
•	A predefined specially curated food item will be delivered daily
•	Full flexibility to change subscription plan and delivery address anytime
•	You can auto-renew subscriptions and get the best price per meal. Subscriptions renew on the same day of every week/month from the start date
</string>
    <string name="terms_and_condition_contents">•Food will be kept at a assigned location near the entrance  everyday around 6AM
•	No food delivery on Fridays and Saturdays
•	Subscription cannot be cancelled once bought
</string>
    <string name="up_coming_meals">Upcoming Meals</string>
    <string name="how_its_works">How its Work</string>
    <string name="start_date"> Start Date</string>
    <string name="login">Login</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="full_name_is_required">Full Name is Required</string>
    <string name="required">*Required</string>
    <string name="email_is_required">Email is Required</string>
    <string name="provide_valid_email_id">Provide Valid Email Id</string>
    <string name="country_code_is_required">Country code is Required</string>
    <string name="mobile_number_is_required">Mobile Number is Required</string>
    <string name="please_provide_the_valid_phone_number">Please provide the valid Phone Number</string>
    <string name="change">Change</string>
    <string name="change_address">Change Address</string>
    <string name="end_date">End Date</string>
    <string name="enter_complete_address">Enter Complete address</string>
    <string name="enter_address_details">Enter address details</string>
    <string name="your_location">Your Location</string>
    <string name="house_number_floor">House Number/Floor</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="land_mark">Landmark(optional)</string>
    <string name="save_address">Save address</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="save_address_as">Save address as</string>
    <string name="house_number_or_floor_required">House Number/Floor Required</string>
    <string name="address_is_required">Address is Required</string>
    <string name="sector_is_required">Sector is Required</string>
    <string name="sector">Sector</string>
    <string name="land_mark_is_required">LandMark is Required</string>
    <string name="please_select_save_address_as">Please select Save address as </string>
    <string name="please_register">Please Register</string>
    <string name="manage_address">Manage address</string>
    <string name="save_as">Save as</string>
    <string name="choose_sector">Choose Sector</string>
    <string name="no_internet_please_check_your_network_connection">No Internet Please Check Your Network Connection!!</string>
    <string name="no_internet_connection">No Internet Connection!!</string>
    <string name="loading">Loading...</string>
    <string name="logging_out">Logging Out</string>
    <string name="are_you_sure_wants_you_wants_to_exit">Are you sure,You wants to exit..?</string>
    <string name="resend_otp_in">Resend OTP in</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="yes">Yes</string>
    <string name="dialog_fine_location_rationale_description">Yes</string>
    <string name="dialog_fine_location_rationale_title">dialog_fine_location_rationale_title</string>
    <string name="dialog_background_location_rationale_title">Yes</string>
    <string name="dialog_background_location_rationale_description">Yes</string>
</resources>