<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvEnterAddressDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/enter_address_details"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/tvEnterAddressDetails"
            android:layout_marginTop="10dp"
            android:background="@color/light_grey" />

        <TextView
            android:id="@+id/tvLocationHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewLine"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/your_location"
            android:textAllCaps="true" />

        <ImageView
            android:id="@+id/locationImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/tvLocationHeader"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_location_red" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLocationHeader"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/locationImageView"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/your_location"
            android:textColor="@color/d2d_color" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropDown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLocation"
            android:layout_marginTop="10dp"
            >
            <AutoCompleteTextView
                android:id="@+id/autTvSector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_sector"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:visibility="gone"
            android:id="@+id/textInputLayoutAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dropDown"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_address"
                android:inputType="textCapWords"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutFloor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayoutAddress"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editHouseNoOrFloor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/house_number_floor"
                android:inputType="textCapWords"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutLandMark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextInputLayoutFloor"
            android:layout_marginTop="10dp"
            android:hint="@string/land_mark"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLandmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvSaveAddressAs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextInputLayoutLandMark"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/save_address_as" />
        <LinearLayout
            android:id="@+id/lnrSaveAddressAsAllOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSaveAddressAs"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_home"
                android:background="@drawable/green_border_rectangle"
                android:padding="6dp"
                />
            <TextView
                android:id="@+id/tvWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work"
                android:layout_marginLeft="20dp"
                android:background="@drawable/green_border_rectangle"
                android:padding="6dp"
                />
            />
            <TextView
                android:id="@+id/tvOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:layout_marginLeft="20dp"
                android:background="@drawable/green_border_rectangle"
                android:padding="6dp"
                />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/lnrOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/tvSaveAddressAs"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:id="@+id/tvEnterLabelOthers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:background="@drawable/green_border_rectangle"
                android:padding="6dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayoutOther"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/TextInputLayoutFloor"
                android:hint="@string/save_as"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save_address"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>