<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/d2d_color"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/backPressImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_left_arrow_black"
                />

            <TextView
                android:id="@+id/tvPlanTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/manage_address"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp" />
            <LinearLayout
                android:id="@id/lnrHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/imageView"
                >

                <TextView
                    android:id="@+id/tvPlanName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:fontFamily="@font/roboto_regular"
                    android:text="Package1"
                    android:textColor="@color/d2d_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tvPlanDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnrHeader"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular" />

            <TextView
                android:id="@+id/tvAllergyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPlanDescription"
                android:layout_marginTop="10dp"
                android:text="@string/allergy_info"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvAllergyInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAllergyTitle"
                android:fontFamily="@font/roboto_regular" />

            <TextView
                android:id="@+id/tvTermsConditionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAllergyInfo"
                android:layout_marginTop="10dp"
                android:text="@string/termsAndConditions"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/tvTermsAndConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTermsConditionHeader"
                android:fontFamily="@font/roboto_regular" />


            <TextView
                android:id="@+id/tvHowItsWorkHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTermsAndConditions"
                android:layout_marginTop="10dp"
                android:text="@string/how_its_works"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvHowItsWorks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvHowItsWorkHeader"
                android:fontFamily="@font/roboto_regular"
                />


            <TextView
                android:id="@+id/tvPackagePlansHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHowItsWorks"
                android:layout_marginTop="10dp"
                android:text="@string/choose_subscription_plan"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/packagePlansRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPackagePlansHeader"
                android:layout_marginTop="4dp"
                android:background="@drawable/grey_border_rectangle"
                tools:listitem="@layout/item_row_subscription_package_plans"

                />

            <LinearLayout
                android:id="@+id/lnrCalendar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/packagePlansRecyclerView"
                android:layout_marginTop="10dp"
                android:background="@drawable/grey_border_rectangle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/start_date"
                    android:textColor="@color/d2d_color"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="0.1"
                    android:background="@drawable/ic_green_calendar" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvUpcomingMeals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnrCalendar"
                android:layout_marginTop="10dp"
                android:text="@string/up_coming_meals"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcomingMealsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvUpcomingMeals"
                tools:listitem="@layout/item_row_upcoming_meals" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/upcomingMealsRecyclerView"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="4dp">


               <!-- <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="7 Days Plan AED 150"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    />
-->
                <Button
                    android:id="@+id/buttonSubscribe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/d2d_color"
                    android:fontFamily="@font/roboto_regular"
                    android:text="Subscription"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    />

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>